src/objects/WEID__c.object
<CustomObject>
    <fields>
        <fullName>WEAccId__c</fullName>
        <description>To be referenced in code, all Wex Europe account ids</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WEAccId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WECaseId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Wex Europe Cases for reference in code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WECaseId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WEOppID__c</fullName>
        <description>All Wex Europe Opportunity IDs</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WEOppID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WEOppVnDID__c</fullName>
        <description>Wex Europe Virtual not Debit Opportunity Ids</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WEOppVnDID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WEProjectId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>WEProjectId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>WexEurope_Accounts</fullName>
        <columns>NAME</columns>
        <columns>WEAccId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WEAccId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>WexEurope Accounts</label>
    </listViews>
    <listViews>
        <fullName>WexEurope_Cases</fullName>
        <columns>NAME</columns>
        <columns>WECaseId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WECaseId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>WexEurope Cases</label>
    </listViews>
    <listViews>
        <fullName>WexEurope_Projects</fullName>
        <columns>NAME</columns>
        <columns>WEProjectId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WEProjectId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>WexEurope Projects</label>
    </listViews>
</CustomObject>